--- a/templates/inbox.html
+++ b/templates/inbox.html
@@ -1,4 +1,3 @@
-<!-- templates/inbox.html -->
 {% extends "layout.html" %}
 {% block content %}
 <h2>Inbox</h2>
@@ -26,7 +25,7 @@
             return;
         }
 
-        const privateKeyPem = atob(data.private_key); // Decode base64
+        const privateKeyPem = atob(data.private_key);
 
         // Initialize decryption with the private key
         decryptMessages(privateKeyPem);
